--- a/oj-client/src/app/components/navbar/navbar.component.html
+++ b/oj-client/src/app/components/navbar/navbar.component.html
@@ -22,13 +22,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <form class="navbar-form">
-            <button type="button" class="btn btn-primary" (click)="login()">Sign in</button>
+            <button type="button" class="btn btn-primary" *ngIf="!auth.authenticated()" (click)="login()">Sign in</button>
           </form>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" *ngIf="auth.authenticated()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{username}} <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">My Profile</a></li>
+            <li><a routerLink="/profile">My Profile</a></li>
             <li><a href="#">My Favorites</a></li>
             <li><a href="#">My Submissions</a></li>
             <li role="separator" class="divider"></li>
