--- a/oj-client/src/app/components/editor/editor.component.html
+++ b/oj-client/src/app/components/editor/editor.component.html
@@ -35,6 +35,10 @@
     <div id="editor"></div>
   </div>
 
+  <div>
+    {{output}}
+  </div>
+
   <footer class="editor-footer">
     <button type="button" class="btn btn-success pull-right" (click)="submit()">Submit Solution</button>
   </footer>
